--- a/Scarb.toml
+++ b/Scarb.toml
@@ -6,13 +6,13 @@ edition = "2023_10"
 # See more keys and their definitions at https://docs.swmansion.com/scarb/docs/reference/manifest.html
 
 [dependencies]
+openzeppelin = { git = "https://github.com/OpenZeppelin/cairo-contracts.git", tag = "v0.8.0" }
 snforge_std = { git = "https://github.com/foundry-rs/starknet-foundry", tag = "v0.14.0" }
 starknet = "2.4.1"
 
 [[target.starknet-contract]]
 casm = true
 sierra = true
-
 
 [tool.sncast.starknetTest]
 account = "starknetTest"
