--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "dependencies": {
-    "@openzeppelin/contracts": "^5.0.1"
+    "@openzeppelin/contracts": "^5.0.1",
+    "dotenv": "^16.4.2",
+    "get-starknet": "^3.0.1",
+    "install": "^0.13.0",
+    "npm": "^10.4.0",
+    "starknet": "^5.24.3"
   }
 }
