--- a/dapp/package.json
+++ b/dapp/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "bignumber.js": "^4.0.4",
+    "get-starknet": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
